# genai-processors-pydantic

./: .pre-commit-config.yaml  CONTRIBUTING.md  MAINTAINER_FEEDBACK.md  README.md  pyproject.toml
.github/workflows/: publish.yml  validate.yml
examples/: generic_example.py  multi_model_example.py
genai_processors_pydantic/: __init__.py  validator.py
genai_processors_pydantic/tests/: __init__.py  test_validator.py
